# featuretools4spark

./: README.md  pyproject.toml
featuretools4spark/: featuretools4spark.py
tests/: test_featuretools4spark.py
