[tool.poetry]
name = "featuretools4spark"
version = "0.1.0"
description = ""
authors = ["Weixing Li <weixing.li@verisk.com>"]

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
